# jaenys

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: BEST_EFFORT_REDACTION.md  COMPARISONS.md  CONFORMANCE.md
examples/: demo_app_integration.py  demo_span_derivation.py  demo_sql_guard.py  demo_store_adapter.py
src/jaenys/: __init__.py  __main__.py  cli.py  core.py  derivation.py
src/jaenys/adapters/: __init__.py  couchbase.py  dynamodb.py  firestore.py  memory.py  mongodb.py  protocol.py  redis.py
src/jaenys/sql/: __init__.py  dialects.py  guard.py  sqlite.py
src/local_llm_guard/: __init__.py  reasoning.py  urls.py
tests/: conftest.py  test_adapters.py  test_core_coercion.py  test_core_fail_closed.py  test_core_states.py  test_derivation.py  test_integration_mongo_redis.py  test_integration_postgres.py  test_llm_guard_reasoning.py  test_llm_guard_urls.py  test_sql_dialects.py  test_sql_edge_cases.py  test_sql_fail_closed.py  test_sql_predicates.py  test_sql_status.py
